new .env example

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:3CXgEu8YGGSXhcIdIU53VVvVIt10Zwn23UAU9vGkquE=
+APP_KEY=base64:wiUatqaJeBmIBt1cJNOBlVsD8I++nD1gc9ZIPqWpISY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=db
 DB_PORT=3306
 DB_DATABASE=teste_final_reativo
-DB_USERNAME=batata
-DB_PASSWORD=12345678
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=redis
 CACHE_DRIVER=file
@@ -26,9 +26,9 @@ MEMCACHED_HOST=127.0.0.1
 
 LARAVEL_ECHO_PORT=6001
 REDIS_CLIENT=predis
-REDIS_HOST=127.0.0.1
+REDIS_HOST=rd
 REDIS_PASSWORD=null
-REDIS_PORT=6379
+# REDIS_PORT=3679
 
 MAIL_MAILER=smtp
 MAIL_HOST=mailhog
