--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,10 @@ services:
   app:  
     build:
         context: .
-        dockerfile: .docker/Dockerfile
+        dockerfile: .docker/php/Dockerfile
     image: 'laravelapp'         
     ports:
-      - 8080:80
-      - 6001:6001
+      - 8080:80      
     volumes:
         - ./:/var/www/html
   db:
@@ -17,6 +16,7 @@ services:
       - "36006:3306"
     environment:
       MYSQL_DATABASE: 'teste_final_reativo'
+      MYSQL_USER: 'root'
       MYSQL_ALLOW_EMPTY_PASSWORD: 1
       MYSQL_ROOT_PASSWORD: ""
     volumes:
@@ -27,3 +27,11 @@ services:
       - ./redis.conf:/usr/local/etc/redis/redis.conf
     ports:
       - "6379:6379"
+  les:
+    build:
+      context: .
+      dockerfile: .docker/laravel-echo-server/Dockerfile
+    image: laravel-echo-server
+    ports:
+      - "6001:6001"
+    
